--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -38,40 +38,45 @@
                             <li>
                                 <a href="{{ path('app_interventions_index', {'personnel': personnel }) }}" data-bs-parent="#sidebar"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
-                                    {% if app.request.attributes.get('_route') == 'app_interventions_index' %}bg-primary text-white{% endif %}">
+                                    {% if app.request.attributes.get('_route') starts with 'app_interventions' %}active{% endif %}"
+                                    {% if app.request.attributes.get('_route') starts with 'app_interventions' %}aria-current="page"{% endif %}>
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Interventions</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_consultations_index' %}bg-primary text-white{% endif %}" data-bs-parent="#sidebar">
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') starts with 'app_consultations' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_consultations' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Consultations</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="{{ path('app_beneficiaires_index', {'personnel': personnel }) }}" class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
-                                   {% if app.request.attributes.get('_route') == 'app_beneficiaires_index' %}bg-primary text-white{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_beneficiaires' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_beneficiaires' %}aria-current="page"{% endif %}
                                    data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Bénéficiaires</span>
                                 </a>
                             <li>
                                 <a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_personnels_index' %}bg-primary text-white{% endif %}" data-bs-parent="#sidebar">
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') starts with 'app_personnels' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_personnels' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Signalétique</span>
                                 </a>
                             </li>
                             <li><a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_fetedesenfants_index' %}bg-primary text-white{% endif %}"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') starts with 'app_fetedesenfants' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_fetedesenfants' %}aria-current="page"{% endif %}
                                    data-bs-parent="#sidebar"><i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Fête des enfants</span>
                                 </a>
                             </li>
                             <li><a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') == 'app_globals_index' %}bg-primary text-white{% endif %}"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
                                    data-bs-parent="#sidebar"><i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Global pour l'année 2024</span>
                                 </a>
