--- a/templates/beneficiaires/_menu.html.twig
+++ b/templates/beneficiaires/_menu.html.twig
@@ -46,7 +46,8 @@
                             </li>
                             <li>
                                 <a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') starts with 'app_consultations' %}active{% endif %}"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
+                                   {% if app.request.attributes.get('_route') starts with 'app_consultations' %}active{% endif %}"
                                    {% if app.request.attributes.get('_route') starts with 'app_consultations' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Consultations</span>
@@ -62,22 +63,25 @@
                                 </a>
                             <li>
                                 <a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') starts with 'app_personnels' %}active{% endif %}"
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
+                                   {% if app.request.attributes.get('_route') starts with 'app_personnels' %}active{% endif %}"
                                    {% if app.request.attributes.get('_route') starts with 'app_personnels' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
                                     <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Signalétique</span>
                                 </a>
                             </li>
                             <li><a href="#"
-                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate {% if app.request.attributes.get('_route') starts with 'app_fetedesenfants' %}active{% endif %}"
-                                   {% if app.request.attributes.get('_route') starts with 'app_fetedesenfants' %}aria-current="page"{% endif %}
-                                   data-bs-parent="#sidebar"><i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
+                                   class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate
+                                   {% if app.request.attributes.get('_route') starts with 'app_fetedesenfants' %}active{% endif %}"
+                                   {% if app.request.attributes.get('_route') starts with 'app_fetedesenfants' %}aria-current="page"{% endif %} data-bs-parent="#sidebar">
+                                    <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Fête des enfants</span>
                                 </a>
                             </li>
                             <li><a href="#"
                                    class="list-group-item list-group-item-action border-end-0 d-inline-block text-truncate"
-                                   data-bs-parent="#sidebar"><i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
+                                   data-bs-parent="#sidebar">
+                                    <i class="bi bi-chevron-right me-1" aria-hidden="true"></i>
                                     <span>Global pour l'année 2024</span>
                                 </a>
                             </li>
