--- a/templates/interventions/index.html.twig
+++ b/templates/interventions/index.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
     {% block nav %}
         {% include 'beneficiaires/_menu.html.twig' %}
-        <main id="main" class="col-12 col-sm-12 col-md-12 col-lg-9 ps-md-2 pt-5 mb-5">
-            <div class="container ">
+        <main id="main" class="col ps-md-2 pt-4">
+            <div class="container-fluid p-5">
                 <div class="row">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-12 col-sm-12 col-md-6 col-lg-12 col-xl-12 mb-5 personnelForm">
-                                {{ form_start(form) }}
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-5 interventionForm">
+                                {{ form_start(form, {attr: {'id': 'intervention'}}) }}
                                 {{ form_widget(form) }}
-                                <button type="submit" class="btn btn-primary">{{ button_label|default('Chercher') }}</button>
+                                <button type="submit" class="btn btn-primary" form="intervention">{{ button_label|default('Chercher') }}</button>
                                 {{ form_end(form) }}
                             </div>
                         </div>
@@ -32,25 +32,19 @@
                     <div class="table-responsive tableOverflow overflow-auto border border-2 p-4 rounded-4">
                         <a href="{{ path('app_interventions_new', {'personnel': personnel }) }}" class="btn btn-primary">Nouvelle intervention</a>
                         <table class="table table-hover mt-3">
-{#                               data-toggle="table"#}
-{#                               data-search="true"#}
-{#                               data-show-columns="true"#}
-{#                               data-show-columns-toggle-all="true"#}
-{#                               data-page-list="[1, 3, 5, 100, all]"#}
-{#                               data-pagination="true">#}
                             <thead>
-                            <tr>
-                                <th>Intervention</th>
-                                <th>Bénéficiaire</th>
-                                <th>Date réalisé</th>
-                                <th>Montant payé</th>
-                                <th>Date référence</th>
-                                <th>Réalisé</th>
-                                <th>Divers</th>
-                                <th>No pièce</th>
-                                <th>No extrait</th>
-                                <th>Modifier / Supprimer</th>
-                            </tr>
+                                <tr>
+                                    <th>Intervention</th>
+                                    <th>Bénéficiaire</th>
+                                    <th>Date réalisé</th>
+                                    <th>Montant payé</th>
+                                    <th>Date référence</th>
+                                    <th>Réalisé</th>
+                                    <th>Divers</th>
+                                    <th>No pièce</th>
+                                    <th>No extrait</th>
+                                    <th>Modifier / Supprimer</th>
+                                </tr>
                             </thead>
                             <tbody>
                             {% for intervention in interventions %}
@@ -60,7 +54,11 @@
                                     <td>{{ intervention.dateRealise ? intervention.dateRealise|date('d-m-Y') : '' }}</td>
                                     <td>{{ intervention.montantPaye }}</td>
                                     <td>{{ intervention.dateFacture ? intervention.dateFacture|date('d-m-Y') : '' }}</td>
-                                    <td>{{ intervention.montantRealise ? 'Oui' : 'Non' }}</td>
+                                    <td>
+                                        <span class="badge {{ intervention.montantRealise ? 'bg-success' : 'bg-danger' }}">
+                                            {{ intervention.montantRealise ? 'Oui' : 'Non' }}
+                                        </span>
+                                    </td>
                                     <td>{{ intervention.divers }}</td>
                                     <td>{{ intervention.pieceNo }}</td>
                                     <td>{{ intervention.extraitNo }}</td>
